--- a/readme.org
+++ b/readme.org
@@ -96,6 +96,9 @@
 ** 主要的一些设定
    #+begin_src emacs-lisp
      (setq inhibit-splash-screen t)
+     ;; display “lambda” as “λ”
+     (global-prettify-symbols-mode 1)
+     
      (when (graphic-p)
        ;; default frame size
        ;;(setq initial-frame-alist
